<resources>
    <string name="token_auth">Bearer %1$s</string>

    <string name="app_name">BrainNet Staff</string>
    <string name="login_title">Masuk ke akun kamu</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="btn_login">Masuk</string>
    <string name="email_cant_empty">Email tidak boleh kosong</string>
    <string name="email_format_error">Format email salah</string>
    <string name="password_cant_empty">Kata sandi tidak boleh kosong</string>
    <string name="try_again">Silahkan coba lagi</string>
    <string name="greetings">%1$s, \n%2$s</string>
    <string name="btn_notification">tombol notifikasi</string>
    <string name="icon_qrcode">icon qr code</string>
    <string name="separator_dot">separator</string>
    <string name="gangguan_name">Nama pelanggan : %1$s</string>
    <string name="gangguan_address">Alamat : %1$s</string>
    <string name="gangguan_to">Kepada : %1$s</string>
    <string name="gangguan_detail">Isi : %1$s</string>
    <string name="restart_router">Restart Router Pelanggan</string>
    <string name="edit_data_tiang">Edit Data Tiang</string>
    <string name="home_data_gangguan">Data Gangguan</string>
    <string name="icon_restart">icon restart</string>
    <string name="icon_tiang">icon tiang</string>
    <string name="icon_good_things">icon hal baik</string>
    <string name="tambahkan_hal_baik_hari_ini">Tambahkan Hal Baik</string>
    <string name="btn_back">tombol kembali</string>
    <string name="gangguan_title">Penyelesaian Gangguan</string>
    <string name="user_name">Nama pelanggan : %1$s (%2$s)</string>
    <string name="user_address">Alamat Pasang : %1$s</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="icon_warning">icon warning</string>
    <string name="edit_tiang_title">Edit Data Tiang</string>
    <string name="detail_tiang_latitude">Latitude : %1$s</string>
    <string name="detail_tiang_longitude">Longitude : %1$s</string>
    <string name="btn_save">Simpan</string>
    <string name="detail_tiang_keterangan">Keterangan</string>
    <string name="hal_baik_desc">Hal baik hari ini : %1$s</string>
    <string name="settings">Settings</string>
    <string name="hal_baik">Hal baik hari ini</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Apakah Anda yakin ingin logout?</string>
    <string name="change_photo">Ganti Foto</string>
    <string name="name">Nama</string>
    <string name="address">Alamat</string>
    <string name="phone">No HP</string>
    <string name="solution">Penyelesaian</string>
    <string name="add_good_things">Tambahkan Hal Baik</string>
    <string name="presensi">Presensi</string>
    <string name="login_webapp">Login Web App</string>
    <string name="todo_list">ToDo List</string>
    <string name="icon_monitoring">icon monitoring</string>
    <string name="monitoring_gangguan">Monitoring Gangguan</string>
    <string name="paket_phone">Paket : %1$s - No HP : %2$s</string>
    <string name="kabel">Kabel : %1$s %2$s m</string>
    <string name="nomer_switch">SW : %1$s</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="app_version">App Version %1$s</string>
    <string name="error_logger">Error Logger</string>
    <string name="icon_todo_list">icon todo list</string>
    <string name="icon_tambah_pelanggan">icon tambah pelanggan</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="aktivasi_pelanggan">Aktivasi Pelanggan</string>
    <string name="icon_aktivasi_pelanggan">icon aktivasi pelanggan</string>
    <string name="icon_setting">icon setting</string>
    <string name="add_customer_ktp">No KTP</string>
    <string name="add_customer_name">Nama Pelanggan</string>
    <string name="add_customer_address">Alamat Pelanggan</string>
    <string name="add_customer_rt">RT</string>
    <string name="add_customer_rw">RW</string>
    <string name="add_customer_phone">Nomor HP</string>
    <string name="add_customer_install_address">Alamat Pasang</string>
    <string name="add_customer_lokasi">Lokasi</string>
    <string name="btn_setting">tombol setting</string>
    <string name="icon_menu_pelanggan">icon menu pelanggan</string>
    <string name="menu_pelanggan">Menu Pelanggan</string>
    <string name="tombol_close">tombol close</string>
    <string name="icon_pelayanan">icon pelayanan</string>
    <string name="services">Menu Pelayanan</string>
    <string name="icon_insert_gangguan">icon insert gangguan</string>
    <string name="tambah_gangguan">Tambah Gangguan</string>
    <string name="icon_pemasangan_selesai">icon pemasangan selesai</string>
    <string name="pemasangan_selesai">Pemasangan Selesai</string>
    <string name="icon_pembayaran">icon pembayaran</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="icon_dispensasi">icon dispensasi</string>
    <string name="dispensasi">Dispensasi</string>
    <string name="nama_pelanggan">Nama Pelanggan : %1$s</string>
    <string name="isi_gangguan">Isi Gangguan</string>
    <string name="pembayaran_nama">Nama : %1$s</string>
    <string name="pembayaran_invoice">No. Invoice : %1$s</string>
    <string name="pembayaran_tagihan">Total Tagihan : Rp %1$s</string>
    <string name="pilih_tanggal_janji">Pilih Tanggal Janji</string>
    <string name="dispensasi_tgl_janji">Tanggal Janji : %1$s</string>
    <string name="pembayaran_text_detail">Detail Tagihan :</string>
    <string name="app_logo">app logo</string>
    <string name="password_modem">Password Modem</string>
    <string name="user_username">Username : %1$s</string>
    <string name="user_pass">Password : %1$s</string>
</resources>